/**
 * Copyright (C) 2014-2016 Open Whisper Systems
 *
 * Licensed according to the LICENSE file in this repository.
 */

package signalservice;

option java_package = "org.whispersystems.signalservice.internal.push";
option java_outer_classname = "ProvisioningProtos";

import "objectivec-descriptor.proto";
option (google.protobuf.objectivec_file_options).class_prefix = "OWSProvisioningProtos";

message ProvisionEnvelope {
  optional bytes publicKey = 1;
  optional bytes body      = 2; // Encrypted ProvisionMessage
}

message ProvisionMessage {
  optional bytes  identityKeyPublic  = 1;
  optional bytes  identityKeyPrivate = 2;
  optional string number             = 3;
  optional string provisioningCode   = 4;
  optional string userAgent          = 5;
  optional bytes  profileKey         = 6;
  optional bool   readReceipts       = 7;
}
